package worldofzuul;

public class Start {
    public static void main(String[] args) {
        Game g = new Game(); //create new game ojbect hej
        g.play(); //play method on game object
    }
}
