@startuml

class Start
class Game
class Command
class CommandWords
class Parser
class Room
Enum CommandWord
class TimeClass
class StatusScore
class Item
class Items

Start --> Game
Game --> Command
Game --> Item
Game --> Items
Game --> Room
Game --> Parser
Game --> TimeClass
Game --> StatusScore
Parser --> Command
Parser --> CommandWords
CommandWords --> CommandWord
Room --> Items
Item --> StatusScore
Items --> Item
Command --> CommandWord
TimeClass --> StatusScore

Class Command{

}

Class CommandWord {

}

Class CommandWords{

}

Class Game{

}

Class Item #4169E1{

}

Class Parser{

}

Class Room{

}

Class Start{

}

Class StatusScore #4169E1{

}

Class TimeClass #4169E1{

}

Class Items #4169E1{

}
@enduml